--- a/Efficient Replica Maintenance for Distributed Storage Systems.tex
+++ b/Efficient Replica Maintenance for Distributed Storage Systems.tex
@@ -13,13 +13,14 @@ The area of focus of the Carbonite algorithm is durably and cost-efficiently sto
 
 \noindent To ensure availability (immediate access to data) of data, typical replication systems responds to disk failure by creating new a replica. When availability is key, replication is immediately used regardless if the failure was a disk failure or just a transient (temporary) failure. The problem of this approach is that constantly making new replicas is costly, and do not scale to large systems. The developers of Carbonite realized that Internet users can tolerate some unavailability as long as they eventually will be able to view what they requested. Therefore they focused on making a durable system. They recognized that keeping data durable has three main challenges. First, keeping data durable, means that no data should be lost. This problem is usually solved by replicating the data as a response to disk failure. The problem with this approach is the network bandwidth is a scare resource, meaning that constantly creating replicas in response to all types of failures is infesable for an Internet scale system. The second challenge of durability is that to keep an object durable one actually only need to create replicas for disk failures, not for transient failures. However, there is no way of distinguish between the two, something the leads to systems having to create much more replicas than actually needed. The third challenge they discovered is that when systems do not perform reintegration of nodes that has suffered from a transient failure, the nodes are efficiently lost. These observations was the main motivation behind Carbonite. With main focus on durability, not availability, and a clear understanding of the main challenges of durability, they created Carbonite.\\
 
-\noindent As mentioned above, being able to maintain large storage application systems require sophisticated techniques for when and how replication is performed. Carbonite only makes replications in respond to failure if the number of replicas for a given object is below the threshould $r_L$, where $r_L$ is the number of replicas needed to survive a burst of failures. This property is enforced by re-integration of failed nodes when they come back up again. By remembering which replicas was stored on a node, they can be reused, and thereby make sure that replication only is performed when the number of replications is below $r_L$, this technique drastically reduces the number of replications required. Since Carbonite creates new replicas when the number of available nodes is less than $r_L$ it will have to keep track of more than $r_L$ replicas. The number of replicas needed therefore dependent on the availability \textit{a}, and shown in the paper to be approximately $\frac{rr_L}{a}$. Because of this, the paper discusses initially creating $\frac{rr_L}{a}$ replicas instead of $r_L$, but concludes that this approach is less attractive since it requires knowing the availability.
+\noindent As mentioned above, being able to maintain large storage application systems require sophisticated techniques for when and how replication is performed. Carbonite only makes replications in respond to failure if the number of replicas for a given object is below the threshould $r_L$, where $r_L$ is the number of replicas needed to survive a burst of failures. This property is enforced by re-integration of failed nodes when they come back up again. By remembering which replicas was stored on a node, they can be reused, and thereby make sure that replication only is performed when the number of replications is below $r_L$, this technique drastically reduces the number of replications required. Since Carbonite creates new replicas when the number of available nodes is less than $r_L$ it will have to keep track of more than $r_L$ replicas. The number of replicas needed therefore dependent on the availability \textit{a}, and shown in the paper to be approximately $\frac{2r_L}{a}$. Because of this, the paper discusses initially creating $\frac{2r_L}{a}$ replicas instead of $r_L$, but concludes that this approach is less attractive since it requires knowing the availability.
 Another technique to reduce the number of replications made as responds to transient failures is timeouts. By waiting a given amount of time before creating a new replica, the node might come back, and cancel the planned replication. However, for timeouts to be useful it is important that  expected node lifetime is much longer than the timeout.\\
 
-\noindent Carbonite is tested using the PlanetLab testbed and a synthetic trace, and the results are compared against Cates and TotalRecall as well as an oracle that is knows if a failure is transient and thereby only creates replications in case of disk failure. For both test cases, Carbonite outperform Cates and TotalRecal, and is only beaten by the oracle, the perfect hypothetical system. Carbonite creates 44\% more data then the oracle when when keeping 1T of data durable, while as Cates and TotalRecall uses almost a factor of two more network traffic than the oracle. Results also shows that as long as the target number of replicas $r_L$ is well chosen, the system is durable. However, they do not have any results on availability which would be interesting to look at, this is justified based on the observation that users can tolerate some unavailability, but should be included because users will not tolerate too much unavailability either. \textcolor{red}{Include results about timeouts.}\\
+\noindent Carbonite is tested using the PlanetLab testbed and a synthetic trace, and the results are compared against Cates and TotalRecall as well as an oracle that is knows if a failure is transient and thereby only creates replications in case of disk failure. For both test cases, Carbonite outperform Cates and TotalRecal, and is only beaten by the oracle, the perfect hypothetical system. Carbonite creates 44\% more data then the oracle when when keeping 1T of data durable, while as Cates and TotalRecall uses almost a factor of two more network traffic than the oracle. Results also shows that as long as the target number of replicas $r_L$ is well chosen, the system is durable. However, they do not have any results on availability which would be interesting to look at, this is justified based on the observation that users can tolerate some unavailability, but should be included because users will not tolerate too much unavailability either. 
+The results of using timeouts shows that use of timeouts leads to decreasing amount of total bytes sent. However, as the timeout interval grows beyond a certain limit (varying for different values of $r_L$ durability falls drastically.\\
 
-\noindent Carbonite can be applied to systems that require durably storing of large amounts of data. As they mention, the systems must be able to handle some unavailability. For instance, they mention that news paper readers can tolerate some unavailability as long as they are able to read the news article at some point. \textcolor{red}{Longer.}\\
+\noindent Carbonite can be applied to systems that require durably storing of large amounts of data. As they mention, the systems must be able to handle some unavailability. For instance, they mention that news paper readers can tolerate some unavailability as long as they are able to read the news article at some point. The authors also discusses that Carbonite can be applied for implementing distributed hash tables, and directory-style systems.\\
 
-\noindent Carbonite in compared against different systems and the results in the paper looks promising when it comes to durability in a large scale system. However, as mentioned above, the paper does not present any results of availability of the system. Even though durability might be a more practical and useful goal than availability for this kind of system, it will be useless if non of the object are ever available. While the research presented is promising it is yet to be tested on a real-world application. A few assumptions, that might not be that realistic, such as assuming that the disks fail independently, no shared bottlenecks, unlimited disk capacity for nodes, and that available nodes are reachable from all other nodes, should be tested. The good think is, that the authors have acknowledge the need for real-world testing and have developed prototypes of different applications for which they promise to report on long-term experience with. \textcolor{red}{Good!}\\
+\noindent Carbonite in compared against different systems and the results in the paper looks promising when it comes to durability in a large scale system. However, as mentioned above, the paper does not present any results of availability of the system. Even though durability might be a more practical and useful goal than availability for this kind of system, it will be useless if non of the object are ever available. While the research presented is promising it is yet to be tested on a real-world application. A few assumptions, that might not be that realistic, such as assuming that the disks fail independently, no shared bottlenecks, unlimited disk capacity for nodes, and that available nodes are reachable from all other nodes, should be tested. The good think is, that the authors have acknowledge the need for real-world testing and have developed prototypes of different applications for which they promise to report on long-term experience with.\\
 
 \end{document}
